--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <script src="scripts/video_resize.js" defer></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>Aulas PWFE</title>
+    <title>Portfólio Senai</title>
 </head>
 <body>
     <header>
@@ -17,8 +16,8 @@
                 </div>
                     <div style="border-left: 1px solid var(--bdr-color); border-right: 1px solid var(--bdr-color); padding: 10px;">
                         <li><a href="index.html"><i class='bx bx-code-block' ></i></a></li>
-                        <li><a href="index.html"><i class='bx bxl-linkedin-square' ></i></a></li>
-                        <li><a href="index.html"><i class='bx bxl-github' ></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/gustavo-bruno-90344a272/" target="_blank"><i class='bx bxl-linkedin-square' ></i></a></li>
+                        <li><a href="https://navarrasa.github.io/Portfolio/"><i class='bx bxl-github' ></i></a></li>
                     </div>
                 <div>
                     <li><a href="index.html"><i class='bx bx-moon' ></i></a></li>
@@ -27,10 +26,11 @@
         </nav>
     </header>
     <main>
-
+        <h1>aaaaaaa</h1>
     </main>
     <footer>
-
+        <p>&copy; Desenvolvido por Gustavo Bruno - 2025</p>
+        <p>Todos os Direitos Reservados</p>
     </footer>
 </body>
 </html>
