--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
     </header>
     <main>  
         <section>
-            <div>
+            <div class="background-video">
+                <video src="https://github.com/Navarrasa/Ferramentas/raw/refs/heads/main/videos/video-background.mp4" autoplay loop muted></video>
+            </div>
+            <div class="content">
                 <h1>Portfólio Senai: Uma Jornada de Aprendizado em JavaScript</h1>
 
                 <p>O Portfólio Senai é um site criado com o objetivo de exibir o aprendizado e os projetos desenvolvidos ao longo das aulas de JavaScript. Nele, cada estudante tem a oportunidade de mostrar suas habilidades e a evolução em uma das linguagens de programação mais poderosas da web.</p>
@@ -39,13 +42,6 @@
                 <p>Este portfólio não é apenas um repositório de tarefas, mas um reflexo da paixão por aprender e crescer. Com ele, os estudantes do Senai demonstram não só seu conhecimento técnico, mas também sua criatividade e capacidade de inovar no mundo digital.</p>
             </div>
         </section>
-
-
-
     </main>
-    <footer>
-        <p>&copy; Desenvlvido por Gustavo Bruno - 2025</p>
-        <p>Todos os Direitos Reservados</p>
-    </footer>
 </body>
 </html>
