adicionando pagina de estilo

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="swiper-wrapper">
                 <!-- Slide 1 -->
                   <div class="swiper-slide">
-                    <a href="#">
+                    <a href="exercicios/paginas/exercicio01.html">
                         <div>
                             <h2>Exercício 1</h2>
                         </div>
