--- a/exercicios/paginas/template.html
+++ b/exercicios/paginas/template.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../estilos/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
-    <title>Exercício 1</title>
+    <title>Exercício JavaScript </title>
 </head>
 <body>
     <header>
