--- a/exercicios/paginas/exercicio02.html
+++ b/exercicios/paginas/exercicio02.html
@@ -12,9 +12,9 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#"><i class='bx bx-left-arrow-alt' title="Aula Anterior"></i></a></li>
+                <li><a href="exercicio01.html"><i class='bx bx-left-arrow-alt' title="Aula Anterior"></i></a></li>
                 <li><a href="../../index.html" title="Página Inicial">Home</a></li>
-                <li><a href="#"><i class='bx bx-right-arrow-alt' title="Próxima Aula"></a></i></li>
+                <li><a href="exercicio03.html"><i class='bx bx-right-arrow-alt' title="Próxima Aula"></a></i></li>
             </ul>
         </nav>
     </header>
@@ -62,6 +62,149 @@
                 <input type="text" name="total_verificador_multiplos" readonly>
             </form>
         </section>
+        <!-- Exercício 4 -->
+        <section class="exercise">
+            <div class="exercise-title">
+                <h1>Exercício 4</h1>
+                <p>Converta uma temperatura em celsius para Fahrenheit (ºC*9/5)+32</p>
+            </div>
+            <form>
+                <p>Graus celsius:</p>
+                <input type="number" name="primeiro_celsius">
+                <p>Graus farenheit:</p>
+                <input type="number" name="total_farenheit" readonly>
+            </form>
+        </section>
+        <!-- Exercício 5 -->
+        <section class="exercise">
+            <div class="exercise-title">
+                <h1>Exercício 5</h1>
+                <p>Calcule a área de um retângulo (base x altura)!</p>
+            </div>
+            <form>
+                <p>Base:</p>
+                <input type="number" name="base_001">
+                <p>Altura:</p>
+                <input type="number" name="area_001">
+                <p>Total:</p>
+                <input type="number" name="total_area" readonly>
+            </form>
+        </section>
+        <!-- Exercício 6 -->
+        <section class="exercise">
+            <div class="exercise-title">
+                <h1>Exercício 6</h1>
+                <p>
+                    Solicite duas notas ao usuário e informe se está acima da média, e se é uma nota par, e mostre o resultado ao usuário.
+                </p>
+            </div>
+            <form>
+                <p>Nota 1:</p>
+                <input type="number" name="nota_media_par_impar">
+                <p>Nota 2:</p>
+                <input type="number" name="nota_media_par_impar2">
+                <p>Resultado Média:</p>
+                <input type="text" name="total_media_par_impar" readonly>
+                <p>Total:</p>
+                <input type="text" name="total_par_impar" readonly>
+            </form>
+        </section>
+        <!-- Exercício 7 -->
+        <section class="exercise">
+            <div class="exercise-title">
+                <h1>Exercício 7</h1>
+                <p>
+                    Solicite o peso e a altura de uma pessoa e calcule o IMC( peso/altura²). Apresente o resultado ao usuário. 
+                </p>
+            </div>
+            <form>
+                <p>Peso:</p>
+                <input type="number" name="numero_peso_imc">
+                <p>Altura:</p>
+                <input type="number" name="numero_altura_imc">
+                <p>Resultado IMC:</p>
+                <input type="text" name="resultado_imc" readonly>
+                <p>Total:</p>
+                <input type="number" name="resultado_numero_imc" readonly>
+            </form>
+        </section>
+        <!-- Exercício 8 -->
+        <section class="exercise">
+            <div class="exercise-title">
+                <h1>Exercício 8</h1>
+                <p>
+                    Verifique se um ano é bissexto.
+                </p>
+            </div>
+            <form>
+                <p>Ano:</p>
+                <input type="number" name="ano">
+                <p>Resultado:</p>
+                <input type="text" name="ano_bissexto" readonly>
+            </form>
+        </section>
+        <!-- Exercício 9 -->
+        <section class="exercise">
+            <div class="exercise-title">
+                <h1>Exercício 9</h1>
+                <p>
+                    Solicite ao usuário uma taxa de câmbio, e um valor desejado, exiba quanto ficaria esse valor convertido com a taxa. 
+                </p>
+            </div>
+            <form>
+                <p>Taxa de câmbio:</p>
+                <input type="number" name="cambio">
+                <p>Dinheiro:</p>
+                <input type="number" name="dinheiro" placeholder="R$">
+                <p>Retorno:</p>
+                <input type="number" name="retorno" placeholder="R$">
+            </form>
+        </section>
+        <!-- Exercício 10 -->
+        <!-- <section class="exercise">
+            <div class="exercise-title">
+                <h1>Exercício 10</h1>
+                <p>
+                    Pedir um número ao usuário de 1 a 9, e imprima a tabuada desse valor.
+                </p>
+            </div>
+            <form>
+                <p>Número:</p>
+                <input type="number" name="numero_tabuada">
+                <p>Resultado:</p>
+                <input type="number" name="tabuada" readonly>
+            </form>
+        </section> -->
+        <!-- Exercício 11 -->
+        <!-- <section class="exercise">
+            <div class="exercise-title">
+                <h1>Exercício 11</h1>
+                <p>
+                    Neste exercício, você vai simular um jogo de "Pedra, papel e tesoura" contra o computador.  
+                </p>
+            </div>
+            <form>
+                <p>Ano:</p>
+                <input type="number" name="ano">
+                <p>Resultado:</p>
+                <input type="text" name="ano_bissexto" readonly>
+            </form>
+        </section> -->
+        <!-- Exercício 12 -->
+        <!-- <section class="exercise">
+            <div class="exercise-title">
+                <h1>Exercício 12</h1>
+                <p>
+                    Neste exercício, você precisa criar um programa que calcula o fatorial de um número. O fatorial de um número é o produto de todos os números inteiros positivos de 1 até o número. Por exemplo, o fatorial de 5 (representado por 5!) é 1 * 2 * 3 * 4 * 5 = 120.  
+                </p>
+            </div>
+            <form>
+                <p>Ano:</p>
+                <input type="number" name="ano">
+                <p>Resultado:</p>
+                <input type="text" name="ano_bissexto" readonly>
+            </form>
+        </section> -->
     </main>
     <footer>
         <section>
