--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <a href="exercicios/paginas/exercicio01.html">
                         <div class="card">
                             <h2>Aula 3</h2>
-                            <p></p>
+                            <p>Arrays, Algoritmos e seus Pilares</p>
                         </div>
                     </a>
                     <!-- Card 3 -->
