--- a/exercicios/paginas/exercicio01.html
+++ b/exercicios/paginas/exercicio01.html
@@ -18,7 +18,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="main">
         <section>
          <div>
              <h1>Exercício de Prototipação de um Website</h1>
