--- a/exercicios/paginas/exercicio03.html
+++ b/exercicios/paginas/exercicio03.html
@@ -18,23 +18,24 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="main">
         <section>
             <div>
                 <p>Arrays e Algoritmos</p>
-            </div>
-            <div>
                 <p>Existem alguns pilares quando falamos sobre Algoritmos:</p>
                 <p>O que é um Algoritmo? É uma programação onde realiza-se passo a passo com o objetivo terminar ou tarefa, automatizar, etc.</p>
                 <p>Um algoritmo possui 4 caracterpisticas:</p>
-                <ul>
-                    <li><p>Abstração: Entendimento do mundo real em computadiocal.</p></li>
-                    <li><p>Modularidade: Fazer cógido reutilizável (Funções Classes)</p></li>
-                    <li><p>Estrutura de Dados: int | float | String | Boolean | Listas | Tuplas | Dicionários Z Tuplas</p></li>
-                    <li><p>Simpliidade: Manutenível, facilidade em entender outra pessoa a fazer mudanças no código</p></li>
-                </ul>
-
+                <p>Abstração: Entendimento do mundo real em computadiocal.</p>
+                <p>Modularidade: Fazer cógido reutilizável (Funções Classes)</p>
+                <p>Estrutura de Dados: int | float | String | Boolean | Listas | Tuplas | Dicionários Z Tuplas</p>
+                <p>Simpliidade: Manutenível, facilidade em entender outra pessoa a fazer mudanças no código</p>
             </div>
+        </section>
+        <section>
+            <div>
+                <h1>Exercícios</h1>
+            </div>
+            
         </section>
     </main>
     <footer>
