adicionando aula Functions

--- a/exercicios/paginas/exercicio03.html
+++ b/exercicios/paginas/exercicio03.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../estilos/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
-    <title>Exercício Arrays </title>
+    <title>Arrays </title>
 </head>
 <body>
     <header>
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="exercicio02.html"><i class='bx bx-left-arrow-alt'></i></a></li>
                 <li><a href="../../index.html">Home</a></li>
-                <li><a href="#"><i class='bx bx-right-arrow-alt' ></a></i></li>
+                <li><a href="exercicio04.html"><i class='bx bx-right-arrow-alt' ></a></i></li>
             </ul>
         </nav>
     </header>
