--- a/index.html
+++ b/index.html
@@ -62,13 +62,19 @@
                         </div>
                     </a>
                     <!-- Card 3 -->
-                    <a href="exercicios/paginas/exercicio01.html">
+                    <a href="exercicios/paginas/exercicio03.html">
                         <div class="card">
                             <h2>Aula 3</h2>
                             <p>Arrays, Algoritmos e seus Pilares</p>
                         </div>
                     </a>
-                    <!-- Card 3 -->
+                    <!-- Card 4 -->
+                    <a href="exercicios/paginas/exercicio04.html">
+                        <div class="card">
+                            <h2>Aula 4</h2>
+                            <p>Functions, innerHTML e DOM</p>
+                        </div>
+                    </a>
                 </div>
             </div>
         </section>
