adicionando exercicios js

--- a/exercicios/paginas/exercicio03.html
+++ b/exercicios/paginas/exercicio03.html
@@ -34,8 +34,8 @@
         <section>
             <div>
                 <h1>Exercícios</h1>
+                <p>Verifique o Console, dev!</p>
             </div>
-            
         </section>
     </main>
     <footer>
@@ -48,6 +48,7 @@
             </div>
         </section>
     </footer>
+    <script src="../scripts/exercicio03.js"></script>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 </body>
 </html>
