--- a/exercicios/paginas/exercicio03.html
+++ b/exercicios/paginas/exercicio03.html
@@ -20,7 +20,7 @@
     </header>
     <main class="main">
         <section>
-            <div>
+            <div id="caixa-grande">
                 <p>Arrays e Algoritmos</p>
                 <p>Existem alguns pilares quando falamos sobre Algoritmos:</p>
                 <p>O que é um Algoritmo? É uma programação onde realiza-se passo a passo com o objetivo terminar ou tarefa, automatizar, etc.</p>
