--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
             </div>
             <div class="content">
                 <div class="content-title">
-                    <h1>Portfólio PWFE</h1>
+                    <h1>Portfólio Programação Web FrontEnd</h1>
                 </div>
                 <div class="content-description">
                     <p>
-                        O Portfólio-PWFE (Programação Front-End) é uma iniciativa voltada para auxiliar novos programadores no aprendizado prático do desenvolvimento front-end. Ele oferece uma série de atividades e exercícios que permitem aos iniciantes aplicar conceitos de HTML, CSS, JavaScript e frameworks como React, por meio da criação de projetos reais e desafiadores.
+                        O Portfólio Programação Web FrontEnd (PWFE) é uma iniciativa voltada para auxiliar novos programadores no aprendizado prático do desenvolvimento front-end. Ele oferece uma série de atividades e exercícios que permitem aos iniciantes aplicar conceitos de HTML, CSS, JavaScript e frameworks como React, por meio da criação de projetos reais e desafiadores.
                     </p>
                     <p>
                         O objetivo é ajudar o programador a desenvolver habilidades essenciais, ao mesmo tempo em que constrói um portfólio atrativo para processos seletivos. As atividades incluem a construção de layouts responsivos, formulários dinâmicos, integração com APIs e criação de componentes reutilizáveis, sempre com foco em práticas do mercado. Assim, o Portfólio-PWFE é uma ferramenta prática para acelerar o aprendizado e gerar um portfólio de qualidade para futuros desafios profissionais.
@@ -73,6 +73,13 @@
                         <div class="card">
                             <h2>Aula 4</h2>
                             <p>Functions, innerHTML e DOM</p>
+                        </div>
+                    </a>
+                    <!-- Card 5 -->
+                    <a href="exercicios/paginas/template.html">
+                        <div class="card">
+                            <h2>Aula 5</h2>
+                            <p>Introdução ao React</p>
                         </div>
                     </a>
                 </div>
