new js exercises

--- a/exercicios/paginas/template.html
+++ b/exercicios/paginas/template.html
@@ -19,15 +19,7 @@
         </nav>
     </header>
     <main>
-        <section>
-            <div>
-                <h1>Exercício 1</h1>
-                <p>Calcule a diferença entre dois números</p>
-            </div>
-        </section>
-        <section>
-
-        </section>
+       
     </main>
     <footer>
         <section>
@@ -39,6 +31,7 @@
             </div>
         </section>
     </footer>
+    <script src="../scripts/exercicio05.js"></script>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 </body>
 </html>
