--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                     </p>
                     <p>
                         O objetivo é ajudar o programador a desenvolver habilidades essenciais, ao mesmo tempo em que constrói um portfólio atrativo para processos seletivos. As atividades incluem a construção de layouts responsivos, formulários dinâmicos, integração com APIs e criação de componentes reutilizáveis, sempre com foco em práticas do mercado. Assim, o Portfólio-PWFE é uma ferramenta prática para acelerar o aprendizado e gerar um portfólio de qualidade para futuros desafios profissionais.
+                        <a href="exercicios/paginas/template.html">aaa</a>
                     </p>
                 </div>
                 <div class="content-cards">
