--- a/exercicios/paginas/exercicio03.html
+++ b/exercicios/paginas/exercicio03.html
@@ -24,10 +24,10 @@
                 <p>Arrays e Algoritmos</p>
                 <p>Existem alguns pilares quando falamos sobre Algoritmos:</p>
                 <p>O que é um Algoritmo? É uma programação onde realiza-se passo a passo com o objetivo terminar ou tarefa, automatizar, etc.</p>
-                <p>Um algoritmo possui 4 caracterpisticas:</p>
-                <p>Abstração: Entendimento do mundo real em computadiocal.</p>
-                <p>Modularidade: Fazer cógido reutilizável (Funções Classes)</p>
-                <p>Estrutura de Dados: int | float | String | Boolean | Listas | Tuplas | Dicionários Z Tuplas</p>
+                <p>Um algoritmo possui 4 caracteristicas:</p>
+                <p>Abstração: Entendimento do mundo real em computacional.</p>
+                <p>Modularidade: Fazer cógido reutilizável (Funções, Classes)</p>
+                <p>Estrutura de Dados: int | float | String | Boolean | Listas | Tuplas | Dicionários | Tuplas</p>
                 <p>Simpliidade: Manutenível, facilidade em entender outra pessoa a fazer mudanças no código</p>
             </div>
         </section>
