--- a/exercicios/paginas/exercicio05.html
+++ b/exercicios/paginas/exercicio05.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#"><i class='bx bx-left-arrow-alt'></i></a></li>
+                <li><a href="exercicio04.html"><i class='bx bx-left-arrow-alt'></i></a></li>
                 <li><a href="../../index.html">Home</a></li>
                 <li><a href="#"><i class='bx bx-right-arrow-alt' ></a></i></li>
             </ul>
@@ -24,7 +24,7 @@
     <footer>
         <section>
             <div>
-                <h2>Portfólio Senai</h2>
+                <h2>Portfólio Senai</h2>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                
             </div>
             <div>
                 <p>&copy; Feito por Gustavo Bruno - 2025</p>
