--- a/index.html
+++ b/index.html
@@ -77,9 +77,16 @@
                         </div>
                     </a>
                     <!-- Card 5 -->
-                    <a href="exercicios/paginas/template.html">
+                    <a href="exercicios/paginas/exercicio05.html">
                         <div class="card">
                             <h2>Aula 5</h2>
+                            <p>Functions</p>
+                        </div>
+                    </a>
+                    <!-- Card 5 -->
+                    <a href="#">
+                        <div class="card">
+                            <h2>Aula 6</h2>
                             <p>Introdução ao React</p>
                         </div>
                     </a>
