--- a/exercicios/paginas/exercicio05.html
+++ b/exercicios/paginas/exercicio05.html
@@ -7,6 +7,31 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <title>Exercício JavaScript </title>
+    <style>
+        body{
+            height: 100%;
+            width: 100%;
+        }
+        main{
+            display: flex;
+            height: 100%;
+            width: 100%;
+            justify-content: center;
+            padding: 20px;
+        }
+        form{
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            align-items: center;
+        }
+        .container{
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            align-items: flex-end;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -19,7 +44,46 @@
         </nav>
     </header>
     <main>
-       
+       <!-- <form title="Exercício 9">
+            <h1>Exercício 9</h1>
+            <div class="container">
+
+                <div class="input-container">
+                    <label for="nome">Nome:</label>
+                    <input type="text" id="nome" name="nome" required>
+                </div>
+
+                <div class="input-container">
+                    <label for="endereco">Endereço:</label>
+                    <input type="text" id="endereco" name="endereco" required>
+                </div>
+
+                <div class="input-container">
+                    <label for="sexo">Sexo:</label>
+                    <input type="radio" id="masculino" name="sexo" value="masculino" required>
+                    <label for="masculino">Masculino</label>
+                    <input type="radio" id="feminino" name="sexo" value="feminino" required>
+                    <label for="feminino">Feminino</label>
+                </div>
+
+                <div class="input-container">
+                    <label for="telefone">Telefone:</label>
+                    <input type="tel" id="telefone" name="telefone" required>
+                </div>
+
+                <div class="input-container">
+                    <label for="celular">Celular:</label>
+                    <input type="tel" id="celular" name="celular" required>
+                </div>
+
+                <div class="input-container">
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                
+                <button type="submit" onclick="validarCamposFormulario()">Enviar</button>
+            </div>
+       </form> -->
     </main>
     <footer>
         <section>
