--- a/exercicios/paginas/pg02/exercicio02.html
+++ b/exercicios/paginas/pg02/exercicio02.html
@@ -224,7 +224,7 @@
             </div>
         </section>
     </footer>
-    <script src="../scripts/exercicio02.js" defer></script>
+    <script src="../../scripts/dom/exercicio_dom.js" defer></script>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 </body>
 </html>
