--- a/exercicios/paginas/pg03/exercicio03.html
+++ b/exercicios/paginas/pg03/exercicio03.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../estilos/style.css">
+    <link rel="stylesheet" href="./estilos/main.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="shortcut icon" href="../../../favicon.ico" type="image/x-icon">
     <title>Arrays </title>
@@ -21,23 +22,24 @@
     <main class="main">
         <section>
             <div id="caixa-grande">
-                <p>Arrays e Algoritmos</p>
+                <h1>Arrays e Algoritmos</h1>
                 <p>Existem alguns pilares quando falamos sobre Algoritmos:</p>
-                <p>O que é um Algoritmo? É uma programação onde realiza-se passo a passo com o objetivo terminar ou tarefa, automatizar, etc.</p>
-                <p>Um algoritmo possui 4 caracteristicas:</p>
-                <p>Abstração: Entendimento do mundo real em computacional.</p>
-                <p>Modularidade: Fazer cógido reutilizável (Funções, Classes)</p>
-                <p>Estrutura de Dados: int | float | String | Boolean | Listas | Tuplas | Dicionários | Tuplas</p>
-                <p>Simpliidade: Manutenível, facilidade em entender outra pessoa a fazer mudanças no código</p>
+                <p><strong>O que é um Algoritmo?</strong> É uma programação onde realiza-se passo a passo com o objetivo terminar ou tarefa, automatizar, etc.</p>
+                <p>Um algoritmo possui <strong>4 caracteristicas</strong>:</p>
+                <p><strong>Abstração</strong>: Entendimento do mundo real em computacional.</p>
+                <p><strong>Modularidade</strong>: Fazer cógido reutilizável (Funções, Classes)</p>
+                <p><strong>Estrutura de Dados</strong>: int | float | String | Boolean | Listas | Tuplas | Dicionários | Tuplas</p>
+                <p><strong>Simpliidade</strong>: Manutenível, facilidade em entender outra pessoa a fazer mudanças no código</p>
             </div>
         </section>
         <section>
             <div>
                 <h1>Exercícios</h1>
-
                 <p>Selecione uma atividade!</p>
 
-                
+                <div class="button-container">
+                    <button onclick="atividade1">Exercício 1</button>
+                </div>
 
             </div>
         </section>
