--- a/exercicios/paginas/pg03/exercicio03.html
+++ b/exercicios/paginas/pg03/exercicio03.html
@@ -38,7 +38,15 @@
                 <p>Selecione uma atividade!</p>
 
                 <div class="button-container">
-                    <button onclick="atividade1">Exercício 1</button>
+                    <button class="ex-btn" data-ex="1">Exercício 1</button>
+                    <button class="ex-btn" data-ex="2">Exercício 2</button>
+                    <button class="ex-btn" data-ex="3">Exercício 3</button>
+                    <button class="ex-btn" data-ex="4">Exercício 4</button>
+                    <button class="ex-btn" data-ex="5">Exercício 5</button>
+                    <button class="ex-btn" data-ex="6">Exercício 6</button>
+                    <button class="ex-btn" data-ex="7">Exercício 7</button>
+                    <button class="ex-btn" data-ex="8">Exercício 8</button>
+                    <button class="ex-btn" data-ex="9">Exercício 9</button>
                 </div>
 
             </div>
@@ -54,7 +62,7 @@
             </div>
         </section>
     </footer>
-    <script type="module" src="../scripts/arrays/arrays.js"></script>
+    <script type="module" src="../../scripts/arrays/arrays.js"></script>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 </body>
 </html>
