--- a/exercicios/paginas/pg04/exercicio04.html
+++ b/exercicios/paginas/pg04/exercicio04.html
@@ -26,7 +26,7 @@
             <button onclick="mudarCor()">Mudar Cor</button>
         </section>
         <section>
-            <script src="../scripts/exercicio04.js"></script>
+            <script src="../../scripts/functions/exercicio04.js"></script>
         </section>
     </main>
     <footer class="footer-website-styles">
