--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                     <li><a href="index.html"><i class='bx bx-home'></i></a></li>
                 </div>
                     <div style="border-left: 1px solid var(--bdr-color); border-right: 1px solid var(--bdr-color); padding: 10px;">
-                        <li><a href="index.html"><i class='bx bx-code-block' ></i></a></li>
+                        <li><a href="https://github.com/Navarrasa"><i class='bx bx-code-block' ></i></a></li>
                         <li><a href="https://www.linkedin.com/in/gustavo-bruno-90344a272/" target="_blank"><i class='bx bxl-linkedin-square' ></i></a></li>
-                        <li><a href="https://navarrasa.github.io/Portfolio/"><i class='bx bxl-github' ></i></a></li>
+                        <li><a href="https://navarrasa.github.io/portfolio/"><i class='bx bxl-github' ></i></a></li>
                     </div>
                 <div>
                     <li><i class='bx bx-moon' ></i></li>
