--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         </div>
                     </a>
                     <!-- Card 5 -->
-                    <a href="#">
+                    <a href="https://github.com/Navarrasa/app_react" target="_blank">
                         <div class="card">
                             <h2>Aula 6</h2>
                             <p>Introdução ao React</p>
