--- a/exercicios/paginas/pg02/exercicio02.html
+++ b/exercicios/paginas/pg02/exercicio02.html
@@ -225,6 +225,6 @@
         </section>
     </footer>
     <script src="../../scripts/dom/exercicio_dom.js" defer></script>
-    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js" defer></script>
 </body>
 </html>
