--- a/exercicios/paginas/pg04/exercicio04.html
+++ b/exercicios/paginas/pg04/exercicio04.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../estilos/style.css">
+    <link rel="stylesheet" href="./estilos/main.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="shortcut icon" href="../../../favicon.ico" type="image/x-icon">
     <title>Exercício JavaScript </title>
@@ -26,7 +27,7 @@
             <button onclick="mudarCor()">Mudar Cor</button>
         </section>
         <section>
-            <script src="../../scripts/functions/exercicio04.js"></script>
+            <script src="../../scripts/functions/functions.js"></script>
         </section>
     </main>
     <footer class="footer-website-styles">
@@ -39,6 +40,6 @@
             </div>
         </section>
     </footer>
-    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js" defer></script>
 </body>
 </html>
