--- a/exercicios/paginas/pg05/exercicio05.html
+++ b/exercicios/paginas/pg05/exercicio05.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../estilos/style.css">
+    <link rel="stylesheet" href="./estilos/main.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="shortcut icon" href="../../../favicon.ico" type="image/x-icon">
     <title>Exercício JavaScript </title>
@@ -70,7 +71,7 @@
             </div>
         </section>
     </footer>
-    <script src="../scripts/exercicio05.js"></script>
+    <script src="../../scripts/arrow_function/arrowfunction.js"></script>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 </body>
 </html>
