--- a/exercicios/paginas/pg01/exercicio01.html
+++ b/exercicios/paginas/pg01/exercicio01.html
@@ -40,6 +40,6 @@
             </div>
         </section>
     </footer>
-    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js" defer></script>
 </body>
 </html>
