--- a/exercicios/paginas/pg03/exercicio03.html
+++ b/exercicios/paginas/pg03/exercicio03.html
@@ -62,7 +62,7 @@
             </div>
         </section>
     </footer>
-    <script type="module" src="../../scripts/arrays/arrays.js"></script>
-    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+    <script type="module" src="../../scripts/arrays/arrays.js" defer></script>
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js" defer></script>
 </body>
 </html>
